--- a/Savanna Blockchain.ipynb
+++ b/Savanna Blockchain.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "source": [
     "- In order to run the sample code in this guide you will need an API key, to obtain an API key follow the instructions detailed on the Zebra developer portal at https://developer.zebra.com/getting-started-0\n",
-    "- Once you have created a login to the developer portal and created an application you must ensure you have selected the Barcode Intelligence package and associated this with your application\n",
+    "- Once you have created a login to the developer portal and created an application you must ensure you have selected the Blockchain package and associated this with your application\n",
     "\n",
     "To run a cell:\n",
     "\n",
