Tidied up printing API sheet

--- a/Savanna Printing.ipynb
+++ b/Savanna Printing.ipynb
@@ -11,7 +11,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook shows you how to get started with Zebra's Savanna APIs related to [Printing](https://developer.zebra.com/printers-print/apis).  **These APIs are still at the prototype stage and are subject to change without warning**\n"
+    "This notebook shows you how to get started with Zebra's Savanna APIs related to [Printing](https://developer.zebra.com/printers-print/apis).  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**These APIs are still at the [prototype](https://developer.zebra.com/sandbox-prototypes) stage and are subject to change without warning**"
    ]
   },
   {
@@ -26,7 +33,7 @@
    "metadata": {},
    "source": [
     "- In order to run the sample code in this guide you will need an API key, to obtain an API key follow the instructions detailed on the Zebra developer portal at https://developer.zebra.com/getting-started-0\n",
-    "- Once you have created a login to the developer portal and created an application you must ensure you have the *Printer Sandbox* package associated with your application.  This may have been done automatically and you can verify this from the [account apps overview](https://developer.zebra.com/user/me/apps)\n",
+    "- Once you have created a login to the developer portal and created an application you must ensure you have the **Printer Sandbox** package associated with your application.  This may have been done automatically and you can verify this from the [account apps overview](https://developer.zebra.com/user/me/apps)\n",
     "\n",
     "To run a cell:\n",
     "\n",
@@ -57,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Printing is achieved by sending ZPL commands to your printer serial number.  As long as the printer has had an external network connection it would have already registered with the Savanna portal automatically so there is no need to perform a registration step.  Ensure your printer is turned on and has an external network connection.\n",
+    "Printing is achieved by sending ZPL commands to your printer serial number.  As long as the printer has had an external network connection it would have already registered with the Savanna portal automatically so there is no need to perform a registration step.  Ensure your printer is turned on and has network connection capable of communicating with the Savanna cloud.\n",
     "\n",
     "ZPL can be generated with the [Zebra label designer](https://www.zebra.com/gb/en/products/software/barcode-printers/zebralink/zebra-designer.html)"
    ]
@@ -91,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The actual printing is achieved via a Savanna REST API.  Run the code below to print the ZPL to the previously specified printer serial number"
+    "The actual printing is achieved via a Savanna [REST API for Printing](https://developer.zebra.com/printers-print/apis).  Run the code below to print the ZPL to the previously specified printer serial number"
    ]
   },
   {
@@ -104,6 +111,7 @@
     "import json\n",
     "from requests.exceptions import HTTPError\n",
     "\n",
+    "# Note the Sandbox API is being used, this will change in the future if the API is moved to production\n",
     "savanna_url = 'https://sandbox-api.zebra.com/v2/printers-basic/' + printer_serial + '/sendRawData'\n",
     "\n",
     "savanna_headers = {'apikey': api_key, 'content-Type':'application/json', 'accept':'application/json', 'cache-control': 'no-cache'}\n",
@@ -127,7 +135,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After a few seconds, you should see the follownig printout appear on your printer:"
+    "After a few seconds, you should see the following printout appear:"
    ]
   },
   {
