--- a/Barcode Intelligence.ipynb
+++ b/Barcode Intelligence.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Savanna Barcode Intelligence - Quickstart"
+    "# Savanna Barcode Intelligence - Quickstart."
    ]
   },
   {
